source/header/header.css
header {
    display: flex;
    justify-content: space-around;
    gap: 60px;
    padding: 15px 25px;
    background-color: #E5C775;
    font-family: sans-serif;
}

.logo {
    margin-left: 25px;
}

.header-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 25px;
    flex-grow: 1;
}

.stat-container {
    display: flex;
    flex-flow: row wrap;
    flex-basis: 1000px;
    gap: 20px;
}

.stat {
    background-color: #F6F6F6;
    border-radius: 12px;
    min-width: 200px;
    max-width: 700px;
    height: 40px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 10px;
    padding: 7.5px 0px;
    flex: 1 1 0;
}

.stat p {
    margin: 0;
}

.header-stat {
    font-weight: bold;
}

.stat-caption {
    color: #2D2E2EB2;
}

#check {
    font-size: 24px;
}

.menu {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #F6F6F6;
    border-radius: 400px;
    height: 50px;
    gap: 14px;
    margin-left: 150px;
}

.menu a {
    text-decoration: none;
    color: #2D2E2E;
    margin-left: 28px;
}

.profile-icon {
    background-color: #234654;
    padding: 12px;
    border-radius: 50%;
}

/* tablet css */
@media (max-width: 1025px) {
    header {
        height: 200px;
        gap: 0px;
    }

    .logo {
        height: 60px;
        position: absolute;
        left: 10px;
    }

    .header-content {
        width: 100%;
        flex-direction: column-reverse;
        align-items: flex-end;
    }

    .stat-container {
        flex-flow: column nowrap;
        width: 100%;
    }

    .stat {
        min-width: 0px;
        max-width: none;
    }
}

/* mobile css */
@media (max-width: 426px) {
    header {
        flex-direction: row;
        padding: 10px;
        width: 100%;
        height: 150px;
    }

    .logo {
        height: 55px;
        margin-left: 0;
        left: 10px;
        position: static;
    }

    .header-content {
        flex-direction: column wrap;
        align-items: center;
        gap: 10px;
        width: 100%;
    }

    .stat-container {
        flex-direction: row;
        justify-content: center;
        gap: 15px;
        max-width: 100%;
        max-height: 40%;
        margin-right: 70px;
        margin-bottom: 3px;
        margin-top: 5px;
    }

    .stat {
        height: auto;
        padding: 5px;
        flex-direction: row;
        align-items: center;
    }

    .stat p {
        margin: 0;
        font-size: 15px;
    }


    .menu a {
        margin-left: 5px;
    }
}

@media (max-width: 321px) {
    .stat {
        height: auto;
        padding: 1px;
        flex-direction: row;
        align-items: center;
    }

    .stat p {
        font-size: 13px;
    }

    .menu {
        width: 100%;
        margin-left: 15px;
        padding: 0 5px;
        gap: 1px; 
    }





}

